<resources>
    <string name="app_name">My Application</string>
    <string name="Notification">Notification</string>
    <string name="name1">Roman Kamushken</string>
    <string name="name2">Tina Turbina</string>
    <string name="name3">Tomek Kuwalskij</string>
    <string name="time1">2 days ago</string>
    <string name="time2">18 minutes ago</string>
    <string name="time3">2 days ago</string>
    <string name="text1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="text2">“into component container and with resizing constraints set????”</string>
    <string name="replay">117 REPLAYS</string>
    <string name="account">Account</string>

</resources>